--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,9 +1,9 @@
 - name: Personal website
-  time: march 18 - june 18
-  url: http://www.georgemihaila.com
-  tagline: personal website / portfolio
+  time: march 18 - april 18
+  url: http://www.mihaidobri.com
+  tagline: personal website / portfolio / blog
   tools: ruby, jekyll, sass, html
-  description:   Maybe AI is the future.
+  description:   You are here! Thank you for checking my project page
   github:
-    url: gmihaila/gmihaila.github.io
+    url: mihaidobri/mihaidobri.github.io
     branch: master
