--- a/mkdocs_project/mkdocs.yml
+++ b/mkdocs_project/mkdocs.yml
@@ -5,7 +5,7 @@ nav:
     
     - Activities: activities/activities.md
     
-    - Things: things/things.md
+    - Useful: useful/useful.md
         
     - Resume: resume/resume.md
 
@@ -47,8 +47,8 @@ markdown_extensions:
     - pymdownx.critic
     - pymdownx.details
     - pymdownx.emoji:
-        emoji_index: !!python/name:materialx.emoji.twemoji
-        emoji_generator: !!python/name:materialx.emoji.to_svg
+        emoji_index: !!python/name:pymdownx.emoji.twemoji
+        emoji_generator: !!python/name:pymdownx.emoji.to_svg
     - pymdownx.inlinehilite
     - pymdownx.magiclink
     - pymdownx.mark
