--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -22,7 +22,7 @@ nav:
 
         - Pretrain Transformers: tutorial_notebooks/pretrain_transformer.md
         
-        - Finetune Transformers: tutorial_notebooks/
+        - Finetune Transformers: tutorial_notebooks/finetune_transformers_pytorch.md
         
         - Finetune Transformers with PytorchText: tutorial_notebooks/
                 
