--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: George's Awesome Website
+site_name: George Mihaila
 site_url: https://github.com/gmihaila/gmihaila.github.io
 repo_name: 'Machine Learning Things'
 repo_url: https://github.com/gmihaila/machine_learning_things
